syntax = "proto3";

option go_package = "./;asset_api";

package asset_api;

// swagger:enum Type
enum Type {
  PING = 0;
  Subtree = 1;
  Block = 2;
  MiningOn = 3;
  NodeStatus = 4;
}
