syntax = "proto3";

option go_package = ".;p2p_api";

package p2p_api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "model/model.proto";

service P2PAPI {
  // Health returns the health of the API.
  rpc Health (google.protobuf.Empty) returns (HealthResponse) {}
  rpc AnnounceStatus (model.AnnounceStatusRequest) returns (google.protobuf.Empty) {}
}

// swagger:model HealthResponse
message HealthResponse {
  bool ok = 1;
  string details = 2;
  google.protobuf.Timestamp timestamp = 3;
}

